# minisignxml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.circleci/: config.yml
.github/workflows/: release.yml  workflow.yml
examples/: roundtrip.py
src/minisignxml/: config.py  errors.py  sign.py  verify.py
src/minisignxml/internal/: constants.py  namespaces.py  utils.py
stubs/defusedxml/: lxml.pyi
stubs/lxml/: builder.pyi
tests/: conftest.py  test_sign.py  test_utils.py  test_verify.py
