[tool.poetry]
name = "minisignxml"
version = "23.3"
description = "Minimal XML signature and verification, intended for use with SAML2"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>"]
license = "Apache-2.0"
readme =  "README.md"
homepage = "https://github.com/HENNGE/minisignxml"
repository = "https://github.com/HENNGE/minisignxml"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = ">=2.8"
lxml = ">=4.4.1"
defusedxml = ">=0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=5.2"
black = "^23"
isort = "^5"
pytest-cov = ">=2.8.1"
mypy = "^1"
lxml-stubs = "^0.4.0"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
files = [
    "src/",
]
mypy_path = "stubs/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"